--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,16 +1,21 @@
 image: gitpod/workspace-mysql
 
 tasks:
-  - init: mysqladmin --user=root password rootpassword && 
+  - init: mysqladmin --user=root password rootpassword &&
+          echo "SET GLOBAL log_bin_trust_function_creators = 1;" | mysql -uroot -prootpassword &&
           mvn dependency:get -Dartifact='mysql:mysql-connector-java:8.0.20' &&
           ./set-install-properties.sh &&
-          cd atlas &&
+          cd ranger &&
           mvn -am -pl security-admin,embeddedwebserver,jisql -DskipTests package &&
-          cd security-admin/scripts &&
+          mkdir security-admin/ews &&
+          ln -s /workspace/ranger-playground/ranger/security-admin/target/security-admin-web-2.1.0-SNAPSHOT security-admin/ews/webapp
+          cd security-admin &&
           mkdir -p jisql/lib &&
           ln -s /workspace/ranger-playground/ranger/jisql/target/jisql-2.1.0-SNAPSHOT.jar jisql/lib/jisql-2.1.0-SNAPSHOT.jar &&
           ln -s /workspace/m2-repository/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2.jar jisql/lib/jopt-simple-3.2.jar &&
-          python2 dba_script.py -q &&
-          python2 db_setup.py 
+          RANGER_ADMIN_CONF=`pwd`/scripts python2 scripts/dba_script.py -q &&
+          RANGER_ADMIN_CONF=`pwd`/scripts python2 scripts/db_setup.py &&
+          cd .. &&
+          mvn -am -pl embeddedwebserver -Dmdep.outputFile=classpath.out dependency:build-classpath
 
-    command: 'echo "TODO: Replace with command to start project"'
+    command: 'cd embeddedwebserver/security-admin && ../../start-ranger-admin.sh'
