--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image: gitpod/workspace-mysql
 
 tasks:
-  - init: './init-ranger-admin.sh'
+  - init: 'DB_FLAVOR=MYSQL ./init-ranger-admin.sh | tee init.log'
     command: 'cd ranger/embeddedwebserver && ../../start-ranger-admin.sh'
